Bug 1512043 - Ensure traverse all nodes owned by the top level shadow host; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D14143

--HG--
extra : moz-landing-system : lando