dom/base/nsFocusManager.cpp
@@ -3127,10 +3127,11 @@ nsIContent* nsFocusManager::GetNextTabbableContentInAncestorScopes(
     bool aForward, int32_t* aCurrentTabIndex, bool aIgnoreTabIndex,
     bool aForDocumentNavigation) {
   nsIContent* startContent = *aStartContent;
-  while (1) {
-    nsIContent* owner = FindOwner(startContent);
-    MOZ_ASSERT(owner, "focus navigation scope owner not in document");
+  nsIContent* owner = FindOwner(startContent);
+  MOZ_ASSERT(owner, "focus navigation scope owner not in document");
+  MOZ_ASSERT(IsHostOrSlot(owner), "scope owner should be host or slot");
 
+  while (IsHostOrSlot(owner)) {
     int32_t tabIndex = 0;
     if (IsHostOrSlot(startContent)) {
       tabIndex = HostOrSlotTabIndexValue(startContent);
@@ -3144,17 +3145,13 @@ nsIContent* nsFocusManager::GetNextTabbableContentInAncestorScopes(
       return contentToFocus;
     }
 
-    // If not found in shadow DOM, search from the shadow host in light DOM
-    if (!owner->IsInShadowTree()) {
-      MOZ_ASSERT(owner->GetShadowRoot());
-
-      *aStartContent = owner;
-      *aCurrentTabIndex = HostOrSlotTabIndexValue(owner);
-      break;
-    }
-
     startContent = owner;
+    owner = FindOwner(startContent);
   }
+
+  // If not found in shadow DOM, search from the top level shadow host in light DOM
+  *aStartContent = startContent;
+  *aCurrentTabIndex = HostOrSlotTabIndexValue(startContent);
 
   return nullptr;
 }
@@ -3219,9 +3216,11 @@ nsresult nsFocusManager::GetNextTabbableContent(
   }
 
   // If we reach here, it means no next tabbable content in shadow DOM.
-  // We need to continue searching in light DOM, starting at the shadow host
-  // in light DOM (updated aStartContent) and its tabindex
+  // We need to continue searching in light DOM, starting at the top level
+  // shadow host in light DOM (updated aStartContent) and its tabindex
   // (updated aCurrentTabIndex).
+  MOZ_ASSERT(FindOwner(aStartContent) == rootElement,
+             "aStartContent should be owned by the root element at this point");
 
   nsPresContext* presContext = aPresShell->GetPresContext();
 
